# Devy-Agentic-DevOps

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  config.example.yaml  devy.sh  docker-compose.auth.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
corpora/: README.md
corpora/acme-sre/: architecture.md  oncall-playbook.md
corpora/acme-sre/postmortems/: 2026-03-18-payment-db-failover.md  2026-05-02-checkout-outage.md
corpora/acme-sre/runbooks/: checkout-latency.md  db-failover.md
corpora/platform/runbooks/: worker-crashloop.md
demo/: faulty-worker.sh
docs/: JOURNEY.md  api.md  architecture.md  configuration.md  deployment.md  extending.md  knowledge.md  memory.md  proxy.md  security.md
docs/plans/: admin-control-plane.md  roadmap.md
edge/oauth2-proxy/: error.html  sign_in.html
host-mcp/: Dockerfile  README.md  allowlist.example.yaml  pyproject.toml
host-mcp/deploy/: com.agentic-devops.host-mcp.plist.example  run-native-macos.sh
host-mcp/src/host_mcp/: __init__.py  allowlist.py  cli.py  config.py  default_allowlist.yaml  server.py
host-mcp/tests/: test_allowlist.py  test_server.py
src/agentic_devops/: __init__.py  config.py
src/agentic_devops/cli/: __init__.py  main.py
src/agentic_devops/db/: __init__.py  connection.py  schema.sql
src/agentic_devops/knowledge/: __init__.py  chunking.py  docgen.py  embeddings.py  enrich.py  factory.py  facts.py  frontmatter.py  history.py  ingest.py  redaction.py  retrieval.py  store.py
src/agentic_devops/proxy/: __init__.py  actions.py  app.py  attachments.py  auth.py  blobs.py  docgen_run.py  docgen_store.py  documents.py  encryption.py  errors.py  github.py  github_client.py  github_crawl.py  harness.py  host_mcp_client.py  hosts.py  ingest_worker.py  mcp_client.py  mcp_registry.py  prompts.py  providers.py  schemas.py  secrets.py  secrets_catalog.py  sessions.py  tokens.py  tracing.py
src/agentic_devops/tools/: __init__.py  base.py  mcp_source.py  router.py
src/agentic_devops/tools/builtin/: __init__.py  actions.py  attachments.py  diagnostics.py  facts.py  hosts.py  memory_index.py  recall.py  repos.py  timeline.py  web.py
tests/: conftest.py  test_actions.py  test_admin.py  test_attachments_digest.py  test_blobs.py  test_chunking.py  test_cli.py  test_diagnostics.py  test_docgen.py  test_docgen_api.py  test_documents.py  test_documents_api.py  test_enrich.py  test_errors.py  test_facts.py  test_frontmatter.py  test_github_client.py  test_github_store.py  test_harness.py  test_history.py  test_hosts.py  test_ingest_enrich.py  test_ingest_okf.py  test_mcp_adapter.py  test_mcp_registry.py  test_memory.py  test_providers.py  test_redaction.py  test_retrieval.py  test_router.py  test_secrets.py  test_secrets_admin.py  test_service.py  test_sessions.py  test_sso_rbac.py  test_store.py  test_streaming.py  test_time_context.py  test_timeline.py  test_tool_images.py  (+2 more)
tests/fixtures/: echo_mcp_server.py
tui/: README.md  client.go  go.mod  main.go  session.go  session_test.go  ui.go  ui_test.go
web/: Dockerfile  README.md  admin.html  admin.js  app.js  index.html  nginx.conf  styles.css
web/errors/: 404.html  413.html  50x.html
